[package]
name = "broadcast"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
maelstrom = { path = "../maelstrom" }
tokio = { version = "1.33.0", features = ["full"] }
